# VideoStickerBot

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml
app/: __init__.py  bot.py  requirements.txt  settings.py
app/database/: users_sql.py
app/plugins/: bot_api.py  callbacks.py  exceptions.py  helpers.py  httpmethods.py  main.py  packs.py  settings.py
helpers/: main.py  pyproject.toml
helpers/helpers/: __init__.py  helpers.py
